--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 Block Alert Latest Version 0.1
 
 Changelog:
-0.1 - First release and break detection added
+0.1 - First release, break and place detection added
