--- a/README
+++ b/README
@@ -1,4 +1,7 @@
-Block Alert Latest Version 0.1
+Block Alert 
+Latest stable version: 0.1
+Latest development version: 0.2
 
 Changelog:
 0.1 - First release, break and place detection added
+0.2 - Commands, configuration (now chose which blocks to alert for default is tnt) and bug fixes.
