Fail at spelling

--- a/README
+++ b/README
@@ -4,4 +4,4 @@ Latest development version: 0.2
 
 Changelog:
 0.1 - First release, break and place detection added
-0.2 - Commands, configuration (now chose which blocks to alert for default is tnt) and bug fixes.
+0.2 - Commands, configuration (now choose which blocks to alert for default is tnt) and bug fixes.
