--- a/README
+++ b/README
@@ -5,3 +5,4 @@ Latest development version: 0.3
 Changelog:
 0.1 - First release, break and place detection added
 0.2 - Commands, configuration (now choose which blocks to alert for, default is tnt) and bug fixes.
+0.3 - Log to file option
